# SFF_Launcher

./: .gitmodules  CMakeLists.txt  README.md
include/: SFFL.hpp  ui.hpp  utils.hpp
include/font/: Inter-Bold.h  Inter-Regular.h
libs/glew/: glew.pc
libs/handler/: handler.cpp  handler.h
src/: SFFL.cpp  main.cpp  ui.cpp  utils.cpp
